Component data binding deep dive part 1&2

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,5 +18,9 @@ p {
 }
 
 table, tr, td {
-  border: solid 1px black;
+  border: solid 3px blue;
 }
+
+/* .redBackgroundClass {
+  background-color: blue;
+} */
