--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,31 +1,31 @@
 p {
-  font-family: Lato;
+    font-family: Lato;
 }
 
 .blueBackgroundClass {
-  background-color: blue;
-  padding-left: 20px;
+    background-color: #00ffea;
+    padding-left: 20px;
 }
 
 .orangeBackgroundClass {
-  background-color: orange;
-  padding-left: 20px;
+    background-color: #d3c01b;
+    padding-left: 20px;
 }
 
 .blackBackgroundClass {
-  background-color: black;
-  padding-left: 20px;
+    background-color: black;
+    padding-left: 20px;
 }
 
 .purpleBackgroundClass {
-  background-color: rgb(183, 0, 255);
-  padding-left: 20px;
+    background-color: #cb89e6;
+    padding-left: 20px;
 }
 
 table, tr, td {
-  border: solid 3px blue;
+    border: solid 3px blue;
 }
 
 /* .redBackgroundClass {
-  background-color: blue;
-} */
+    background-color: blue;
+  } */
