--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,1 @@
-/* Add application styles & imports to this file! */
-table, tr, td {
-    border: solid 1px black;
-}
+/* You can add global styles to this file, and also import other style files */
