--- a/src/app/static/sidebar/sidebar.component.html
+++ b/src/app/static/sidebar/sidebar.component.html
@@ -6,6 +6,12 @@
 <button routerLink="/form" routerLinkActive="activeLink">Form</button>
 &nbsp;&nbsp;
 
+<button routerLink="/reactive-form/basic" routerLinkActive="activeLink">Reactive Basic Form</button>
+&nbsp;&nbsp;
+
+<button routerLink="/reactive-form/advanced" routerLinkActive="activeLink">Advanced Basic Form</button>
+&nbsp;&nbsp;
+
 <button routerLink="/contact" routerLinkActive="activeLink" [routerLinkActiveOptions]="{exact: true}">Contact</button>
 &nbsp;&nbsp;
 
