--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header></header>
 <sidebar></sidebar>
-<div>
+<div [ngClass]="'blueBackgroundClass'">
     <router-outlet></router-outlet>
 </div>
 <footer></footer>
