--- a/src/app/static/sidebar/sidebar.component.html
+++ b/src/app/static/sidebar/sidebar.component.html
@@ -3,13 +3,16 @@
 <button routerLink="/homepage" routerLinkActive="activeLink">Homepage</button>
 &nbsp;&nbsp;
 
+<button routerLink="/my-pipes" routerLinkActive="activeLink">Pipes</button>
+&nbsp;&nbsp;
+
 <button routerLink="/form" routerLinkActive="activeLink">Form</button>
 &nbsp;&nbsp;
 
-<button routerLink="/reactive-form/basic" routerLinkActive="activeLink">Reactive Basic Form</button>
+<button routerLink="/reactive-form/basic" routerLinkActive="activeLink">Basic Reactive Form</button>
 &nbsp;&nbsp;
 
-<button routerLink="/reactive-form/advanced" routerLinkActive="activeLink">Advanced Basic Form</button>
+<button routerLink="/reactive-form/advanced" routerLinkActive="activeLink">Advanced Reactive Form</button>
 &nbsp;&nbsp;
 
 <button routerLink="/contact" routerLinkActive="activeLink" [routerLinkActiveOptions]="{exact: true}">Contact</button>
