Testing, Material, i18n & Accessibility

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
 <header></header>
 <sidebar></sidebar>
-<div [ngClass]="'blueBackgroundClass'">
+<!-- <div [ngClass]="'blueBackgroundClass'">
     <router-outlet></router-outlet>
-</div>
+</div> -->
 <footer></footer>
+
+<!-- <p>
+    {{title}}
+</p>
+
+<div id="content">
+    <span>
+        my-app is running
+    </span>
+</div>
+
+<div>
+    {{title2}}
+</div> -->
