--- a/src/app/reactive-form/advance/advance.component.html
+++ b/src/app/reactive-form/advance/advance.component.html
@@ -50,7 +50,8 @@
 
     <button type="button" (click)="resetForm()">Reset</button>
 
-    <button type="submit">Submit</button>
+    <button mat-button color="primary" type="submit">Submit</button>
+
     <br />
     <br />
 
