--- a/src/app/static/sidebar/sidebar.component.css
+++ b/src/app/static/sidebar/sidebar.component.css
@@ -1,4 +1,5 @@
 .activeLink {
-    background-color: brown;
-    color: white;
+    background-color: #d3b3b3;
+    border-left: 8px, solid, #8b8985;
+    width: calc(100% -8px) !important;
 }
